<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Calendar Notifications</string>
    <string name="main_activity_title">Calendar Notifications</string>
    <string name="settings">Settings</string>
    <string name="application_has_no_access">This application needs special permissions to be able to access calendar notifications\n\nPlease grant READ_CALENDAR and WRITE_CALENDAR permissions\n\nWRITE_CALENDAR is required to hide original calendar notification</string>
    <string name="cancel">Cancel</string>
    <string name="on">Enabled</string>
    <string name="off">Disabled</string>
    <string name="empty" translatable="false" />
    <string name="dismiss">Dismiss</string>
    <string name="dismiss_event">Dismiss event</string>
    <string name="snooze">Snooze</string>
    <string name="show_dismiss_button">Show \'Dismiss\' button</string>
    <string name="show_dismiss_summary">The \'Dismiss\' action will be displayed with each notification, notification then can only be dismissed with this button</string>
    <string name="play_reminder_sound">Notification sound</string>
    <string name="play_reminder_sound_summary">Enable to play notification sound</string>
    <string name="ringtone_selection">Notification Ringtone</string>
    <string name="ringtone_selection_summary">Choose ringtone for notification</string>
    <string name="vibra_on">Vibration</string>
    <string name="notification_light_summary">Use LED to notify about active notification</string>
    <string name="notification_light_title">Notification LED</string>
    <string name="help_feedback">Help and feedback</string>
    <string name="feedback">Feedback</string>
    <string name="help_title">If you found a bug, have a question or want to suggest a feature or give a feedback - please contact developer via email.\n\nPlease don\'t expect instant response. I\'m developing this application in my free time and can only respond when I have time for that</string>
    <string name="email_developer">EMAIL DEVELOPER</string>
    <string name="forward_to_pebble">Forward to Pebble</string>
    <string name="forward_to_pebble_summary">If you have Pebble Smart Watch - this will enable app to forward notifications to your Pebble</string>
    <string name="multiple_events">%d more events</string>
    <string name="multiple_events_details">Tap to see details</string>
    <string name="title_activity_activity_snooze">Snooze</string>
    <string name="empty_title">(No title)</string>
    <string name="snooze_event_for">Snooze event for:</string>
    <string name="snooze_preset_15_min">15 minutes</string>
    <string name="snooze_preset_1_hour">1 hour</string>
    <string name="snooze_preset_4_hours">4 hours</string>
    <string name="snooze_preset_1_day">1 day</string>
    <string name="location">Location:</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="change_event_time">Change event time</string>
    <string name="change_event_time_repeating_event">Change event time (creates event copy for repeating events)</string>
    <string name="one_hour_from_now">Move next hour</string>
    <string name="same_time_tomorrow">Move next day</string>
    <string name="next_week_same_day">Move next week</string>
    <string name="move_four_weeks">Move by 4 weeks</string>
    <string name="custom_pick_a_date">Custom (pick a date)</string>
    <string name="title_activity_activity_test_buttons_and_to_do" translatable="false">ActivityTestButtonsAndToDo</string>
    <string name="snoozed_until_string">Snoozed until </string>
    <string name="card_view_btn_change">CHANGE</string>
    <string name="card_view_btn_snooze">SNOOZE</string>
    <string name="card_view_btn_dismiss">DISMISS</string>
    <string name="new_events_detected">Reload to see new events</string>
    <string name="button_reload">RELOAD</string>
    <string name="settings_name">Settings</string>
    <string name="credits_icon_author" translatable="false">Cornmanthe 3rd</string>
    <string name="app_icon_credit">Icon credit:</string>
    <string name="kotlin_language" translatable="false">Kotlin Language</string>
    <string name="app_created_with">Created with</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="snooze_presets">Snooze settings</string>
    <string name="smartwatch_support">Smartwatch support</string>
    <string name="error_cannot_parse_preset">Sorry, cannot parse your input</string>
    <string name="snooze_presets_title">Snooze Presets</string>
    <string name="snooze_presets_summary">Here you can change default snooze presets</string>
    <string name="error_too_many_presets">Only up to 6 presets are supported, extra presets would be ignored</string>
    <string name="now">now</string>
    <string name="days">days</string>
    <string name="day">day</string>
    <string name="hours">hours</string>
    <string name="hour">hour</string>
    <string name="minutes">minutes</string>
    <string name="minute">minute</string>
    <string name="seconds">seconds</string>
    <string name="second">second</string>
    <string name="no_events_to_display">No event notifications to display\nActive and snoozed notifications would appear here</string>
    <string name="no_calendar_permissions_main">Application has no calendar permissions</string>
    <string name="view_after_edit">View after edit</string>
    <string name="view_after_edit_summary">Enable to automatically view event in the calendar after changing event time using Snooze activity</string>
    <string name="misc_settings">Misc settings</string>
    <string name="abort_broadcast">Abort broadcast</string>
    <string name="abort_broadcast_summary">Select this if you are seeing notifications from calendar along with notifications from this app</string>
    <string name="enable_reminders">Enable reminders</string>
    <string name="enable_reminders_summary">If enabled, app would repeatedly remind about active notifications</string>
    <string name="remind_interval">Remind interval</string>
    <string name="invalid_reminder_interval">Reminder interval cannot be zero, reverted to 1 minute</string>
    <string name="max_reminders">Max reminders</string>
    <string name="max_reminders_summary">Maximum number of reminders to fire, 0 for indefinite</string>
    <string name="pebble_notification_title">Calendar</string>
    <string name="snooze_all">Snooze All</string>
    <string name="quiet_time_from">Quiet time from</string>
    <string name="quiet_time_to">Quiet time to</string>
    <string name="enable_quiet_time">Enable quiet time</string>
    <string name="reminders_section">Reminders</string>
    <string name="quiet_hours_section">Quiet hours settings</string>
    <string name="quiet_hours_summary">Use quiet time to mute all reminders and snoozed event during certain period of time, primary events notifications would still play sound and vibrate (according to settings)</string>
    <string name="quiet_hours_mute_primary">Mute primary notifications</string>
    <string name="quiet_hours_mute_primary_summary">Mute primary notifications during quiet time, so app becomes completely silent. Primary notification is a very first notification for particular event</string>
    <string name="custom_snooze_options_title">Custom snooze options</string>
    <string name="custom_snooze_options_summary">Show custom snooze options on the snooze activity</string>
    <string name="pebble_event_text_in_the_title">Event text in the title</string>
    <string name="pebble_event_text_in_the_title_summary">Useful for old pebble firmwares</string>
    <string name="title_calendars_activity">Handled Calendars</string>
    <string name="menu_about">About</string>
    <string name="appearance">Appearance</string>
    <string name="advanced">Advanced</string>
    <string name="open_wiki">OPEN WIKI</string>
    <string name="dash_or_dash">— or —</string>
    <string name="check_wiki_text">If you have a question on using this app please first check application Wiki page if it is already answered there:</string>
    <string name="app_behavior">Behavior</string>
    <string name="notification_auto_dismiss_on_reschedule">Auto dismiss on reschedule</string>
    <string name="notification_auto_dismiss_on_reschedule_summary">Dismiss notification when event is rescheduled via Calendar app\nEvent should be moved by at least 15 minutes for this functionality to work\nEvent should have reminders that are still in the future\n\nNOTE: This functionality depends on Calendar Provider to notify app about calendar change, such notification is usually received with some delay causing some delay between event edit and notification auto-dismissal (up to 60 seconds)</string>
    <string name="attach_applicatoin_log">Attach application logs</string>
    <string name="attach_applicatoin_log_perm">Logs are limited to current application only\n\nNo textual information about event is visible in the log (there are no event titles, locations, etc)\n\nAny files sent over the email can be intercepted by 3rd parties!</string>
    <string name="use_set_alarm_clock_title">Use setAlarmClock for reminders</string>
    <string name="use_set_alarm_clock_summary">Marshmallow and above only!\nThis would trigger app to use setAlarmClock API call when scheduling reminders and snoozed events\nThis would increase reminders time accuracy\nAs a side effect, user would see \'alarm\' icon on UI when there are snoozed events or active reminders</string>
    <string name="first_day_of_week">First day of the week</string>
    <string name="first_day_of_week_summary">(Android 5 and above only)</string>
    <string name="darker_calendar_color">Darker calendar colors</string>
    <string name="use_set_alarm_clock_for_events">Use setAlarmClock for events</string>
    <string name="use_set_alarm_clock_for_events_summary">Only affects fail back event paths, don\'t need to set it if you are not missing any reminders</string>
    <string name="keep_logs_title">Keep application logs</string>
    <string name="keep_logs_summary">Do not enable unless asked by this app developer</string>
    <string name="pebble">Pebble</string>
    <string name="pebble_forward_reminders">Forward reminders to pebble</string>
    <string name="pebble_forward_reminders_summary">By default only original event notifications are forwarded</string>
    <string name="pref_category_experimental_features">Experimental features</string>
    <string name="open_calendar_from_snooze_title">Tap on title opens calendar</string>
    <string name="open_calendar_from_snooze_summary">Tap on the event title/time on Snooze activity would open details in the calendar application</string>
    <string name="open_in_calendar">Open in Calendar</string>
    <string name="snooze_hide_event_description_title">Hide description</string>
    <string name="snooze_hide_event_description_summary">Do not show event description on the snooze activity</string>
    <string name="enable_dismiss_and_delete_title">\'Dismiss and delete\' menu</string>
    <string name="enable_dismiss_and_delete_summary">Delete when its done! Adds menu option on the snooze screen to dismiss the notification and delete actual event, all in one click. Would only work for non-repeating events</string>
    <string name="un_mute_notification">Un-Mute</string>
    <string name="mute_notification">Mute</string>
    <string name="done">Done</string>
    <string name="delete_event">Delete</string>
    <string name="notificaiton_swipe_prefix">Swiping the notification:</string>
    <string name="notificaiton_swipe_dismisses_the_event">Dismisses the event</string>
    <string name="notificaiton_swipe_snoozes_the_event">Snoozes the event using 1st preset</string>
    <string name="notificaiton_swipe_disallowed">Not allowed (ongoing notification)</string>
</resources>