<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.github.quarck.calnotify.prefs.SnoozePresetPreference
            android:key="pref_snooze_presets"
            android:title="@string/snooze_presets_title"
            android:summary="@string/snooze_presets_summary"
            android:defaultValue="15m, 1h, 4h, 1d"
            />

        <CheckBoxPreference android:key="show_event_after_reschedule"
            android:title="@string/view_after_edit"
            android:summary="@string/view_after_edit_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="show_custom_snooze_and_until"
            android:title="@string/custom_snooze_options_title"
            android:summary="@string/custom_snooze_options_summary"
            android:defaultValue="true" />

        <PreferenceCategory
            android:title="@string/advanced"
            android:key="_snooze_advanced">

                <CheckBoxPreference
                        android:key="snooze_hide_event_description"
                        android:title="@string/snooze_hide_event_description_title"
                        android:summary="@string/snooze_hide_event_description_summary"
                        android:defaultValue="false"
                        />

                <CheckBoxPreference
                    android:key="open_calendar_from_snooze"
                    android:title="@string/open_calendar_from_snooze_title"
                    android:summary="@string/open_calendar_from_snooze_summary"
                    android:defaultValue="true"
                    />

                <CheckBoxPreference
                    android:key="notification_auto_dismiss"
                    android:title="@string/notification_auto_dismiss_on_reschedule"
                    android:summary="@string/notification_auto_dismiss_on_reschedule_summary"
                    android:defaultValue="false" />

                <CheckBoxPreference
                        android:key="enable_dismiss_and_delete"
                        android:title="@string/enable_dismiss_and_delete_title"
                        android:summary="@string/enable_dismiss_and_delete_summary"
                        android:defaultValue="false"
                        />
        </PreferenceCategory>

</PreferenceScreen>
