<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:key="first_day_of_week"
        android:title="@string/first_day_of_week"
        android:summary="@string/first_day_of_week_summary"
        android:dialogTitle="@string/first_day_of_week"
        android:entries="@array/days_of_week_entries"
        android:entryValues="@array/days_of_week_values"
        android:defaultValue="1" />

    <!-- use_set_alarm_clock -->
    <CheckBoxPreference
        android:key="use_set_alarm_clock"
        android:title="@string/use_set_alarm_clock_title"
        android:summary="@string/use_set_alarm_clock_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="use_set_alarm_clock_for_failback"
        android:title="@string/use_set_alarm_clock_for_events"
        android:summary="@string/use_set_alarm_clock_for_events_summary"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="darker_calendar_colors"
        android:title="@string/darker_calendar_color"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="keep_logs"
        android:title="@string/keep_logs_title"
        android:summary="@string/keep_logs_summary"
        android:defaultValue="false"
        />

    <PreferenceCategory
        android:key="misc_experimental"
        android:title="@string/pref_category_experimental_features"
        >

        <CheckBoxPreference
            android:key="sub_minute_reminder_intervals"
            android:title="@string/sub_minute_reminders_title"
            android:summary="@string/sub_minute_reminders_summary"
            />

    </PreferenceCategory>

</PreferenceScreen>
