<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory 
        android:title="@string/settings"
        android:key="pref_key_settings">

        <CheckBoxPreference
            android:key="remove_original"
            android:title="Remove original ntf"
            android:summary="DEBUG ONLY OPTION!!!\nSorry if you are seeing this in release build!!\nUncheck if you want to see event in the google calendar as well, so you can match notification"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="pref_key_enable_dismiss_button"
            android:summary="@string/show_dismiss_summary"
            android:title="@string/show_dismiss_button"
            android:defaultValue="true"  />

        <CheckBoxPreference
            android:key="notification_led"
            android:summary="@string/notification_light_summary"
            android:title="@string/notification_light_title"
            android:defaultValue="true" />

        <RingtonePreference
            android:key="pref_key_ringtone"
            android:summary="@string/ringtone_selection_summary"
            android:title="@string/ringtone_selection"
            android:ringtoneType="notification" />

        <CheckBoxPreference android:key="vibra_on"
            android:title="@string/vibra_on"
            android:defaultValue="true"/>

        <CheckBoxPreference
            android:key="forward_to_pebble"
            android:title="@string/forward_to_pebble"
            android:summary="@string/forward_to_pebble_summary"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <!--
     <PreferenceCategory 
        android:title="Notification"
        android:key="pref_key_notification">
        

        <RingtonePreference 
            android:key="pref_key_ringtone"
            android:summary=""            
            android:title="Notification tone"
            android:ringtoneType="notification" />

        <CheckBoxPreference
            android:key="pref_key_enable_ongoing_notification"
            android:summary="Display ongoing notification when SmartNotify is active"
            android:title="Display ongoing notification"
            android:defaultValue="true"  />
        
    </PreferenceCategory>
    -->
    
</PreferenceScreen>