<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:title="@string/title_calendars_activity"
        android:summary="">
        <intent
            android:action="com.github.quarck.calnotify.state.CalendarsActivity"/>
    </header>

    <header
        android:fragment="com.github.quarck.calnotify.state.fragments.BehaviorSettingsFragment"
        android:title="@string/app_behavior"
        android:summary=""
        />

    <header
        android:title="@string/appearance"
        android:summary="">
        <intent
            android:action="com.github.quarck.calnotify.state.AppStylePrefActivity"/>
    </header>


    <header
        android:fragment="com.github.quarck.calnotify.state.fragments.NotificationSettingsFragment"
        android:title="@string/notification_settings"
        android:summary="" />

    <header
        android:fragment="com.github.quarck.calnotify.state.fragments.SnoozeSettingsFragment"
        android:title="@string/snooze_presets"
        android:summary="" />

    <header
        android:fragment="com.github.quarck.calnotify.state.fragments.ReminderSettingsFragment"
        android:title="@string/reminders_section"
        android:summary="" />

    <header
        android:fragment="com.github.quarck.calnotify.state.fragments.QuietHoursSettingsFragment"
        android:title="@string/quiet_hours_section"
        android:summary="" />

    <header
        android:fragment="com.github.quarck.calnotify.state.fragments.SmartwatchSettingsFragment"
        android:title="@string/smartwatch_support"
        android:summary="" />

    <header
        android:fragment="com.github.quarck.calnotify.state.fragments.MiscSettingsFragment"
        android:title="@string/misc_settings"
        android:summary="" />

    <!--    <header
            android:fragment="com.example.state.SettingsActivity$SettingsFragmentTwo"
            android:title="@string/prefs_category_two"
            android:summary="@string/prefs_summ_category_two" >
            <extra android:name="someKey" android:value="someHeaderValue" />
        </header>
    -->
</preference-headers>