<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <CheckBoxPreference
            android:key="enable_reminding_key"
            android:title="@string/enable_reminders"
            android:summary="@string/enable_reminders_summary"
            android:defaultValue="false"/>

        <com.github.quarck.calnotify.prefs.ReminderIntervalPreference
            android:key="remind_interval_key2"
            android:title="@string/remind_interval"
            android:numeric="integer"
            android:defaultValue="10"
            android:dependency="enable_reminding_key" />

        <EditTextPreference
            android:key="reminder_max_reminders"
            android:title="@string/max_reminders"
            android:summary="@string/max_reminders_summary"
            android:defaultValue="0"
            android:dependency="enable_reminding_key" />

</PreferenceScreen>
