<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HelpAndFeedbackActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_help_and_feedback"
    >

<LinearLayout
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/primary_text"
        android:text="@string/check_wiki_text"
        android:id="@+id/help_and_feedback_wikitext_view"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_wiki"
        android:id="@+id/buttonWiki"
        android:onClick="OnButtonWiki"
        android:padding="16dp"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/accent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/secondary_text"
        android:text="@string/dash_or_dash"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/primary_text"
        android:text="@string/help_title"
        android:id="@+id/help_and_feedback_text_view"
        android:clickable="true"
        android:onClick="OnButtonEasterEgg"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_developer"
        android:id="@+id/buttonEmailDeveloper"
        android:onClick="OnButtonEmailDeveloper"
        android:padding="16dp"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/accent"
        />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attach_applicatoin_log"
        android:id="@+id/checkboxIncludeLogs"
        android:visibility="visible"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/primary_text"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attach_applicatoin_log_perm"
        android:id="@+id/textViewLogFileNote"
        android:visibility="visible"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/primary_text"
        />


</LinearLayout>
</ScrollView>
